# ed-agent

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
ed-ai/: Dockerfile  pyproject.toml
ed-ai/ed_ai/: agent.py  app.py  benchmark.py  evaluator.py  ollama_client.py  parser.py
ed-ai/ed_ai/prompts/: personas.py  serializer.py
ed-ai/ed_ai/rl/: __init__.py  __main__.py  action_encoder.py  checkpoint.py  evaluate.py  network.py  ppo_agent.py  self_play.py  state_encoder.py  train.py
ed-ai/ed_ai/tests/: test_agent.py  test_benchmark.py  test_parser.py  test_serializer.py
ed-ai/models/: .gitignore
ed-engine/: Dockerfile  pyproject.toml
ed-engine/ed_engine/: app.py
ed-engine/ed_engine/api/: games.py  players.py  schemas.py  session.py
ed-engine/ed_engine/cards/: __init__.py  base.py  card_data.py  constructions.py  critters.py
ed-engine/ed_engine/db/: __init__.py  elo.py  player_store.py  sqlite.py
ed-engine/ed_engine/engine/: actions.py  ai_runner.py  deck.py  events.py  game_manager.py  locations.py  perspective.py  rugwort.py  scoring.py  seasons.py  special_rules.py  supply.py  workers.py
ed-engine/ed_engine/models/: __init__.py  card.py  enums.py  game.py  location.py  player.py  resources.py
ed-engine/ed_engine/tests/: test_api.py  test_card_types.py  test_cards.py  test_deck.py  test_e2e_ai.py  test_events.py  test_game.py  test_integration.py  test_locations.py  test_perspective.py  (+5 more)
ed-engine/tools/: audit_special_rules.py  bootstrap_manifest.py  card_manifest.json  gen_card_images.py  reconcile.py  scan_all.py  scan_extract.py  simulate.py
(+37 files in other folders)
